Fixed long tags stretching page

--- a/static/less/dash.less
+++ b/static/less/dash.less
@@ -899,6 +899,7 @@ img {
     color: #a0a0a0;
     text-decoration: none;
     font-size: 12px;
+    word-break: break-word;
 }
 
 .post .tags a:hover {
